<resources>
    <string name="app_name">Demo</string>
    <string name="username">Pseudonyme</string>
    <string name="password">Mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="username_check_empty">Le pseudonyme ne peut être vide !</string>
    <string name="password_check_empty">Le mot de passe ne peut être vide !</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_my_posts">Mes Posts</string>
    <string name="title_dashboard">Tableau de bord</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_add_post">Ajouter un Post</string>
    <string name="display_content_post">afficher plus</string>
    <string name="languages_menu">Langages</string>
    <string name="english_menu">Anglais</string>
    <string name="french_menu">Français</string>
    <string name="help_menu">Aide</string>
    <string name="clear_database_menu">Vider la base de données</string>
    <string name="logout_menu">Se déconnecter</string>
    <string name="welcome_header">Bienvenue</string>
    <string name="title_post">Titre</string>
    <string name="body_post">Contenu</string>
    <string name="button_validate">Valider</string>
    <string name="button_cancel">Annuler</string>
    <string name="title_check_empty">Le titre ne peut être vide !</string>
    <string name="body_check_empty">Le contenu ne peut être vide !</string>
    <string name="delete">Supprimer</string>
    <string name="button_modify_post">Modifier un Post</string>
    <string name="title_albums">Les albums</string>
    <string name="album_created_by">Crée par:</string>
    <string name="button_back">Retour</string>
</resources>
