<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrModifyPostActivity">

    <TextView
        android:id="@+id/textView_title_post_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_title_post_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_post_activity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_title_post_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_post" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_body_post_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_title_post_object">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_body_post_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/body_post" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_validate_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_validate"
        android:theme="@style/AppTheme.Button.Validate"
        android:drawableRight="@drawable/ic_done_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_cancel_post"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_body_post_object" />

    <Button
        android:id="@+id/button_cancel_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_cancel"
        android:drawableRight="@drawable/ic_close_white_24dp"
        android:theme="@style/AppTheme.Button.Cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_validate_post"
        app:layout_constraintEnd_toStartOf="@+id/button_validate_post"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>